--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 	<script src="angular.min.js"></script>
 	<script src="bootstrap.min.js"></script>
 	<script src="luiza.js"></script>
-	<script  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAvi4dRapMeN2Ut3qNslp3167qCpomUcM4">
+	<script  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAkfqaa5Cy4qSIdQ4moJTRZZCcRKewFLlE
+">
 >
     </script>
 <style>
